--- a/Business/NotifyBusiness/build.gradle
+++ b/Business/NotifyBusiness/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCEfficient:AppProcessLib:1.3.1'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
 
-    
+    implementation project(path: ':ToolUtilsLib')
 //    implementation 'com.github.yangchong211.YCNotification:NotificationLib:1.0.4'
 //    implementation 'com.github.yangchong211.YCNotification:NotifyMessage:1.0.4'
 
