--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -2,6 +2,8 @@
 apply plugin: 'com.android.application'
 //apply plugin: 'com.yc.spi.loader'
 apply plugin: 'com.yc.time.loader'
+//关于debug工具依赖gradle，debug下依赖的
+apply from: rootProject.file('debug.gradle')
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
