--- a/CommonLib/AppBaseStore/build.gradle
+++ b/CommonLib/AppBaseStore/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':EventUploadLib')
     //腾讯mmkv库
     implementation "com.tencent:mmkv-static:1.2.7"
 }
