--- a/ServerLib/XlogServer/build.gradle
+++ b/ServerLib/XlogServer/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation rootProject.ext.dependencies["okhttp"]
     implementation rootProject.ext.dependencies["gson"]
     implementation(rootProject.ext.dependencies["roomRuntime"])
+    implementation project(path: ':EventUploadLib')
     annotationProcessor(rootProject.ext.dependencies["roomCompiler"])
     implementation project(path: ':ToolUtilsLib')
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.7'
