--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -260,6 +260,7 @@ dependencies {
     implementation project(path: ':ThreadBusiness')
     implementation project(path: ':NotifyBusiness')
     implementation project(path: ':KotlinBusiness')
+    implementation project(path: ':MonitorFpsLib')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
