--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -261,6 +261,7 @@ dependencies {
     implementation project(path: ':NotifyBusiness')
     implementation project(path: ':KotlinBusiness')
     implementation project(path: ':MonitorFpsLib')
+    implementation project(path: ':PrivacyMonitor')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
