--- a/PrivacyMonitor/src/main/AndroidManifest.xml
+++ b/PrivacyMonitor/src/main/AndroidManifest.xml
@@ -2,4 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.privacymonitor">
 
+    <application>
+        <provider
+            android:name="com.yc.privacymonitor.AppMonitorInstaller"
+            android:authorities="${applicationId}.privacy-monitor-installer"
+            android:enabled="@bool/privacy_monitor_auto_install"
+            android:exported="false" />
+    </application>
+
 </manifest>
