--- a/MonitorLib/PrivacyMonitor/build.gradle
+++ b/MonitorLib/PrivacyMonitor/build.gradle
@@ -29,10 +29,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation project(path: ':ToolUtilsLib')
 
-    implementation 'de.robv.android.xposed:api:82'
+    //implementation 'de.robv.android.xposed:api:82'
     //https://github.com/tiann/epic
     //implementation 'com.github.tiann:epic:0.11.2'
     implementation 'me.weishu:epic:1.0.0'
