--- a/CommonLib/AppStatusLib/build.gradle
+++ b/CommonLib/AppStatusLib/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':AppCommonInter')
     implementation 'com.github.yangchong211.YCEfficient:AppProcessLib:1.3.1'
 }
