--- a/CommonLib/AppStatusLib/build.gradle
+++ b/CommonLib/AppStatusLib/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 //迁移到jitpack
 apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
