--- a/MonitorLib/MonitorPrivacy/build.gradle
+++ b/MonitorLib/MonitorPrivacy/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':AppCommonInter')
     //implementation 'de.robv.android.xposed:api:82'
     //https://github.com/tiann/epic
     //implementation 'com.github.tiann:epic:0.11.2'
