--- a/CommonLib/ParallelTaskLib/src/main/AndroidManifest.xml
+++ b/CommonLib/ParallelTaskLib/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yc.appstart" >
+    package="com.yc.parallel" >
 
     <application>
 
