--- a/settings.gradle
+++ b/settings.gradle
@@ -130,7 +130,7 @@ include ':ZxingServerLib', ':WebSocketLib',  ':SocketIoLib', ':SerialTaskLib' ,
         ':NetHelperLib', ':LocaleHelperLib' ,':CountTimerLib' ,':LocalShareLib' ,
         ':AnimatorToolLib', ':AppTraceTool', ':LongAliveLib',':EasyExecutor',
         ':ThreadPoolLib', ':ThreadTaskLib', ':AutoCloserLib', ':AppProcessLib',
-        ':AnimatorHelper', ':ThreadDebugLib'
+        ':AnimatorHelper', ':ThreadDebugLib', ':LiveDataBus'
 project(':ZxingServerLib').projectDir = new File('ToolLib/ZxingServerLib')
 project(':WebSocketLib').projectDir = new File('ToolLib/WebSocketLib')
 project(':SocketIoLib').projectDir = new File('ToolLib/SocketIoLib')
@@ -149,6 +149,7 @@ project(':EasyExecutor').projectDir = new File('ToolLib/EasyExecutor')
 project(':LocalShareLib').projectDir = new File('ToolLib/LocalShareLib')
 project(':AnimatorHelper').projectDir = new File('ToolLib/AnimatorHelper')
 project(':ThreadDebugLib').projectDir = new File('ToolLib/ThreadDebugLib')
+project(':LiveDataBus').projectDir = new File('ToolLib/LiveDataBus')
 
 
 /* +++++++++ Apt框架基础工具库 +++++++++ */
@@ -208,4 +209,4 @@ project(':VideoM3u8').projectDir = new File('PlayerLib/VideoM3u8')
 project(':VideoView').projectDir = new File('PlayerLib/VideoView')
 
 
-include ':LiveDataBus'
+
