--- a/WidgetLib/WebViewLib/build.gradle
+++ b/WidgetLib/WebViewLib/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation(rootProject.ext.dependencies["coordinatorlayout"])
     implementation(rootProject.ext.dependencies["okhttp"])
     implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+
     //okhttp库
     //implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     //查询地址：https://mvnrepository.com/artifact/com.tencent.tbs.tbssdk/sdk?repo=jcenter
