--- a/Business/LibraryLayer/build.gradle
+++ b/Business/LibraryLayer/build.gradle
@@ -99,7 +99,7 @@ dependencies {
     //状态栏
     //https://github.com/yangchong211/YCStatusBar
     api 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
-
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     //https://github.com/yangchong211/YCRefreshView
     //recyclerView封装库
     api 'com.github.yangchong211.YCRefreshView:RefreshViewLib:3.0.1'
