--- a/WidgetLib/WebViewLib/build.gradle
+++ b/WidgetLib/WebViewLib/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["okhttp"])
     implementation project(path: ':ToolUtilsLib')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 
     //okhttp库
     //implementation 'com.squareup.okhttp3:okhttp:3.10.0'
