--- a/AppTool/build.gradle
+++ b/AppTool/build.gradle
@@ -209,7 +209,7 @@ dependencies {
 
     implementation project(path: ':LocaleHelperLib')
     implementation project(path: ':XlogServer')
-    implementation project(path: ':LeetBusiness')
+    implementation project(path: ':AppLeet')
     implementation project(path: ':MonitorKeepAlive')
     implementation project(path: ':HttpServer')
     implementation project(path: ':LibraryLayer')
