--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@
 include ':AppTool'
 include ':AppTest'
 include ':AppLeet'
+include ':AppDesign'
 
 
 /* +++++++++ 业务组件层 +++++++++ */
@@ -10,7 +11,7 @@ include ':GameBusiness', ':AnimBusiness',':MvvmDatabinding',
         ':MvcTodoBusiness',':JetpackBusiness',':AndroidBusiness',':CommonBusiness',
         ':BusinessInterface', ':StatusBusiness', ':OkHttpBusiness',':BleBusiness',
         ':ThreadBusiness', ':NotifyBusiness', ':KotlinBusiness', ':PlayerBusiness',
-        ':SocketBusiness',':DesignBusiness',':LibraryLayer'
+        ':SocketBusiness',':LibraryLayer'
 project(':GameBusiness').projectDir = new File('Business/GameBusiness')
 project(':AndroidBusiness').projectDir = new File('Business/AndroidBusiness')
 project(':JetpackBusiness').projectDir = new File('Business/JetpackBusiness')
@@ -31,7 +32,6 @@ project(':NotifyBusiness').projectDir = new File('Business/NotifyBusiness')
 project(':KotlinBusiness').projectDir = new File('Business/KotlinBusiness')
 project(':PlayerBusiness').projectDir = new File('Business/PlayerBusiness')
 project(':SocketBusiness').projectDir = new File('Business/SocketBusiness')
-project(':DesignBusiness').projectDir = new File('Business/DesignBusiness')
 project(':LibraryLayer').projectDir = new File('Business/LibraryLayer')
 
 
