--- a/CommonLib/BaseClassLib/build.gradle
+++ b/CommonLib/BaseClassLib/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
-
+    implementation rootProject.ext.dependencies["viewpager2"]
 }
