--- a/AppLeet/src/main/AndroidManifest.xml
+++ b/AppLeet/src/main/AndroidManifest.xml
@@ -2,8 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.leetbusiness">
 
-    <application>
-        <activity android:name="com.yc.leetbusiness.LeetCodeActivity"/>
+    <application
+        android:name="com.yc.leetbusiness.LeetApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_yc_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+
+        <activity android:name="com.yc.leetbusiness.LeetCodeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name="com.yc.leetbusiness.array.ArrayTestActivity"/>
     </application>
 
