--- a/AidlService/build.gradle
+++ b/AidlService/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        applicationId "com.yc.appservice"
     }
 
     buildTypes {
