--- a/AidlClient/build.gradle
+++ b/AidlClient/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        applicationId "com.yc.appclient"
     }
 
     buildTypes {
@@ -37,6 +38,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["recyclerview"])
+    implementation project(path: ':ToolUtilsLib')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
 }
 
