--- a/AidlClient/src/main/AndroidManifest.xml
+++ b/AidlClient/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ycbjie.aptools">
+    package="com.yc.appclient">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.yc.appclient.MainActivity">
+        <activity android:name="com.yc.appclient.ClientMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,6 @@
             </intent-filter>
         </activity>
         <activity android:name="com.yc.appclient.SetAppActivity"/>
-        <activity android:name=".WebActivity"/>
     </application>
 
 </manifest>
