--- a/AppDesign/build.gradle
+++ b/AppDesign/build.gradle
@@ -9,6 +9,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        applicationId "com.yc.designbusiness"
     }
     buildTypes {
         release {
