--- a/AidlService/build.gradle
+++ b/AidlService/build.gradle
@@ -11,6 +11,8 @@ android {
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
         applicationId "com.yc.appservice"
+        // 64k
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -18,6 +20,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 
