--- a/AidlClient/build.gradle
+++ b/AidlClient/build.gradle
@@ -11,6 +11,8 @@ android {
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
         applicationId "com.yc.appclient"
+        // 64k
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -32,6 +34,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
 }
 
 dependencies {
@@ -39,6 +46,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["recyclerview"])
     implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':LibraryLayer')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
 }
 
