--- a/AidlService/src/main/AndroidManifest.xml
+++ b/AidlService/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.yc.appservice">
 
     <application
+        android:name="com.yc.library.base.app.LibApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ServiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
