--- a/yc.gradle
+++ b/yc.gradle
@@ -43,8 +43,6 @@ ext {
     //jetpack系列
     coreVersion = '1.0.0'
     databindingVersion = '3.2.1'
-    lifecycleVersion = '2.2.0'
-    liveDataVersion = '2.2.0'
     archLifecycleVersion = '2.2.0'
     roomVersion = '2.0.0'
     workVersion = '2.0.0'
@@ -79,12 +77,16 @@ ext {
             databinding               : "androidx.databinding:databinding-common:${databindingVersion}",
             lifecycle                 : "androidx.lifecycle:lifecycle-extensions:${archLifecycleVersion}",
             lifecycleCompiler         : "androidx.lifecycle:lifecycle-common:${archLifecycleVersion}",
-            lifecycleCommon           : "androidx.lifecycle:lifecycle-runtime:${archLifecycleVersion}",
             lifecycleRuntime          : "androidx.lifecycle:lifecycle-runtime:${archLifecycleVersion}",
-            livedataCore              : "androidx.lifecycle:lifecycle-livedata-core:${liveDataVersion}",
-            livedataKtx               : "androidx.lifecycle:lifecycle-livedata-ktx:${liveDataVersion}",
+            livedataCore              : "androidx.lifecycle:lifecycle-livedata-core:${archLifecycleVersion}",
             workKtx                   : "androidx.work:work-runtime-ktx:${workVersion}",
             activityKtx               : "androidx.activity:activity-ktx:${activityKtx}",
+
+            //将 Kotlin 协程与生命周期感知型组件一起使用
+            //https://developer.android.com/topic/libraries/architecture/coroutines
+            lifecycleKtx              : "androidx.lifecycle:lifecycle-runtime-ktx:${archLifecycleVersion}",
+            livedataKtx               : "androidx.lifecycle:lifecycle-livedata-ktx:${archLifecycleVersion}",
+            viewmodelKtx              : "androidx.lifecycle:lifecycle-viewmodel-ktx:${archLifecycleVersion}",
 
 
             //kotlin
@@ -123,8 +125,6 @@ ext {
             "AppStartLib"             : "com.github.yangchong211.YCEfficient:AppStartLib:1.3.1",
             "AppProcessLib"           : "com.github.yangchong211.YCEfficient:AppProcessLib:1.3.1",
             "AutoCloserLib"           : "com.github.yangchong211.YCEfficient:AutoCloserLib:1.3.1",
-
-            //弹窗库
 
             //tools
             "easypermissions"         : "pub.devrel:easypermissions:$permissionsVersion",
