--- a/yc.gradle
+++ b/yc.gradle
@@ -81,6 +81,10 @@ ext {
             livedataCore              : "androidx.lifecycle:lifecycle-livedata-core:${archLifecycleVersion}",
             workKtx                   : "androidx.work:work-runtime-ktx:${workVersion}",
             activityKtx               : "androidx.activity:activity-ktx:${activityKtx}",
+            navigationFragment        : "androidx.navigation:navigation-fragment:${archLifecycleVersion}",
+            navigationFragmentKtx     : "androidx.navigation:navigation-fragment-ktx:${archLifecycleVersion}",
+            navigationUiKtx           : "androidx.navigation:navigation-ui-ktx:${archLifecycleVersion}",
+            activityKtx               : "androidx.activity:activity-ktx:${activityKtx}",
 
             //将 Kotlin 协程与生命周期感知型组件一起使用
             //https://developer.android.com/topic/libraries/architecture/coroutines
