--- a/MonitorLib/MonitorCrashLib/build.gradle
+++ b/MonitorLib/MonitorCrashLib/build.gradle
@@ -39,14 +39,15 @@ dependencies {
     implementation(rootProject.ext.dependencies["swiperefreshlayout"])
     implementation(rootProject.ext.dependencies["coordinatorlayout"])
     //工具类utils：https://github.com/yangchong211/YCCommonLib
-    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.0'
+//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.0'
     implementation 'com.github.yangchong211.YCCommonLib:BaseClassLib:1.3.0'
     implementation 'com.github.yangchong211.YCCommonLib:AppRestartLib:1.3.0'
     implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.3.0'
-    //implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ToolUtilsLib')
     //implementation project(path: ':BaseClassLib')
     //implementation project(path: ':AppRestartLib')
     //implementation project(path: ':ActivityManager')
+    implementation project(path: ':EventUploadLib')
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
