--- a/MonitorLib/MonitorSpeed/build.gradle
+++ b/MonitorLib/MonitorSpeed/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -29,17 +30,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation(rootProject.ext.dependencies["recyclerview"])
-    implementation(rootProject.ext.dependencies["media"])
-    //工具类utils：https://github.com/yangchong211/YCCommonLib
-//    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.3.0'
-    implementation project(path: ':ToolUtilsLib')
-    //adapter:https://github.com/yangchong211/YCRefreshView
-    implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
-    //状态栏：https://github.com/yangchong211/YCStatusBar
-    implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
     //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
-    implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
-    //吐司工具库：https://github.com/yangchong211/YCDialog
-    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
